--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.7.0
+  sdk: ^3.5.4
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -33,6 +33,12 @@ dependencies:
   dartz: ^0.10.1
   get: ^4.7.2
   flutter_onboarding_slider: ^1.0.11
+  smooth_page_indicator: ^1.0.0  # Add this for page indicators
+  introduction_screen: ^3.1.17
+  dots_indicator: ^4.0.1
+  carousel_slider: ^5.0.0
+
+
 
 
   flutter:
@@ -67,6 +73,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
        - assets/images/
+       - assets/icons/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -80,17 +87,18 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Montserrat
+      fonts:
+        - asset: assets/fonts/Montserrat/Montserrat-SemiBold.ttf
+        # - asset: assets/fonts/Montserrat\Montserrat-Light.ttf
+        #   weight: 400
+          # style: italic
+    # - family: Montserrat
+    #   fonts:
+    #     - asset: assets/fonts/Montserrat/Montserrat-Black.ttf
+    #     - asset: assets/fonts\Montserrat/Montserrat-BlackItalic.ttf
+    #       weight: 700
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
