--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_onboarding_slider: ^1.0.11
 
 
+
   flutter:
     sdk: flutter
 
@@ -66,9 +67,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/
-    - assets/icons/
-  #   - images/a_dot_ham.jpeg
+       - assets/images/
+       - assets/icons/
+       - assets/icons/Combined-Shape.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -81,74 +82,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  fonts:
-     - family: League_Spartan
-       fonts:
-         - asset: assets/fonts/League_Spartan/static/LeagueSpartan-Black.ttf
-           weight: 900
-         - asset: assets/fonts/League_Spartan/static/LeagueSpartan-Bold.ttf
-           weight: 700
-         - asset: assets/fonts/League_Spartan/static/LeagueSpartan-ExtraBold.ttf
-           weight: 800
-         - asset: assets/fonts/League_Spartan/static/LeagueSpartan-ExtraLight.ttf
-           weight: 200
-         - asset: assets/fonts/League_Spartan/static/LeagueSpartan-Light.ttf
-           weight: 300
-         - asset: assets/fonts/League_Spartan/static/LeagueSpartan-Medium.ttf
-           weight: 500
-         - asset: assets/fonts/League_Spartan/static/LeagueSpartan-Regular.ttf
-           weight: 400
-         - asset: assets/fonts/League_Spartan/static/LeagueSpartan-SemiBold.ttf
-           weight: 600
-         - asset: assets/fonts/League_Spartan/static/LeagueSpartan-Thin.ttf
-           weight: 100
-     - family: Montserrat
-       fonts:
-         - asset: assets/fonts/Montserrat/static/Montserrat-Black.ttf
-           weight: 900
-         - asset: assets/fonts/Montserrat/static/Montserrat-BlackItalic.ttf
-           weight: 900
-           style: italic
-         - asset: assets/fonts/Montserrat/static/Montserrat-Bold.ttf
-           weight: 700
-         - asset: assets/fonts/Montserrat/static/Montserrat-BoldItalic.ttf
-           weight: 700
-           style: italic
-         - asset: assets/fonts/Montserrat/static/Montserrat-ExtraBold.ttf
-           weight: 800
-         - asset: assets/fonts/Montserrat/static/Montserrat-ExtraBoldItalic.ttf
-           weight: 800
-           style: italic
-         - asset: assets/fonts/Montserrat/static/Montserrat-ExtraLight.ttf
-           weight: 200
-         - asset: assets/fonts/Montserrat/static/Montserrat-ExtraLightItalic.ttf
-           weight: 200
-           style: italic
-         - asset: assets/fonts/Montserrat/static/Montserrat-Light.ttf
-           weight: 300
-         - asset: assets/fonts/Montserrat/static/Montserrat-LightItalic.ttf
-           weight: 300
-           style: italic
-         - asset: assets/fonts/Montserrat/static/Montserrat-Medium.ttf
-           weight: 500
-         - asset: assets/fonts/Montserrat/static/Montserrat-MediumItalic.ttf
-           weight: 500
-           style: italic
-         - asset: assets/fonts/Montserrat/static/Montserrat-Regular.ttf
-           weight: 400
-         - asset: assets/fonts/Montserrat/static/Montserrat-SemiBold.ttf
-           weight: 600
-         - asset: assets/fonts/Montserrat/static/Montserrat-SemiBoldItalic.ttf
-           weight: 600
-           style: italic
-         - asset: assets/fonts/Montserrat/static/Montserrat-Thin.ttf
-           weight: 100
-         - asset: assets/fonts/Montserrat/static/Montserrat-ThinItalic.ttf
-           weight: 100
-           style: italic
-
-
-
+  # fonts:
+  #   - family: Schyler
+  #     fonts:
+  #       - asset: fonts/Schyler-Regular.ttf
+  #       - asset: fonts/Schyler-Italic.ttf
+  #         style: italic
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
